; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/mm/extr_kmemleak.c_hex_dump_object.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/mm/extr_kmemleak.c_hex_dump_object.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.seq_file = type { i32 }
%struct.kmemleak_object = type { i32, i64 }

@HEX_ROW_SIZE = common dso_local global i32 0, align 4
@HEX_MAX_LINES = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [30 x i8] c"  hex dump (first %d bytes):\0A\00", align 1
@HEX_GROUP_SIZE = common dso_local global i32 0, align 4
@HEX_ASCII = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [8 x i8] c"    %s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.seq_file*, %struct.kmemleak_object*)* @hex_dump_object to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hex_dump_object(%struct.seq_file* %0, %struct.kmemleak_object* %1) #0 {
  %3 = alloca %struct.seq_file*, align 8
  %4 = alloca %struct.kmemleak_object*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32, align 4
  store %struct.seq_file* %0, %struct.seq_file** %3, align 8
  store %struct.kmemleak_object* %1, %struct.kmemleak_object** %4, align 8
  %12 = load %struct.kmemleak_object*, %struct.kmemleak_object** %4, align 8
  %13 = getelementptr inbounds %struct.kmemleak_object, %struct.kmemleak_object* %12, i32 0, i32 1
  %14 = load i64, i64* %13, align 8
  %15 = inttoptr i64 %14 to i32*
  store i32* %15, i32** %5, align 8
  %16 = load i32, i32* @HEX_ROW_SIZE, align 4
  %17 = mul nsw i32 %16, 5
  %18 = zext i32 %17 to i64
  %19 = call i8* @llvm.stacksave()
  store i8* %19, i8** %9, align 8
  %20 = alloca i8, i64 %18, align 16
  store i64 %18, i64* %10, align 8
  %21 = load %struct.kmemleak_object*, %struct.kmemleak_object** %4, align 8
  %22 = getelementptr inbounds %struct.kmemleak_object, %struct.kmemleak_object* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 8
  %24 = load i32, i32* @HEX_MAX_LINES, align 4
  %25 = load i32, i32* @HEX_ROW_SIZE, align 4
  %26 = mul nsw i32 %24, %25
  %27 = sext i32 %26 to i64
  %28 = trunc i64 %27 to i32
  %29 = call i32 @min(i32 %23, i32 %28)
  store i32 %29, i32* %7, align 4
  store i32 %29, i32* %8, align 4
  %30 = load %struct.seq_file*, %struct.seq_file** %3, align 8
  %31 = load i32, i32* %7, align 4
  %32 = call i32 (%struct.seq_file*, i8*, ...) @seq_printf(%struct.seq_file* %30, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0), i32 %31)
  store i32 0, i32* %6, align 4
  br label %33

33:                                               ; preds = %56, %2
  %34 = load i32, i32* %6, align 4
  %35 = load i32, i32* %7, align 4
  %36 = icmp slt i32 %34, %35
  br i1 %36, label %37, label %60

37:                                               ; preds = %33
  %38 = load i32, i32* %8, align 4
  %39 = load i32, i32* @HEX_ROW_SIZE, align 4
  %40 = call i32 @min(i32 %38, i32 %39)
  store i32 %40, i32* %11, align 4
  %41 = load i32, i32* @HEX_ROW_SIZE, align 4
  %42 = load i32, i32* %8, align 4
  %43 = sub nsw i32 %42, %41
  store i32 %43, i32* %8, align 4
  %44 = load i32*, i32** %5, align 8
  %45 = load i32, i32* %6, align 4
  %46 = sext i32 %45 to i64
  %47 = getelementptr inbounds i32, i32* %44, i64 %46
  %48 = load i32, i32* %11, align 4
  %49 = load i32, i32* @HEX_ROW_SIZE, align 4
  %50 = load i32, i32* @HEX_GROUP_SIZE, align 4
  %51 = trunc i64 %18 to i32
  %52 = load i32, i32* @HEX_ASCII, align 4
  %53 = call i32 @hex_dump_to_buffer(i32* %47, i32 %48, i32 %49, i32 %50, i8* %20, i32 %51, i32 %52)
  %54 = load %struct.seq_file*, %struct.seq_file** %3, align 8
  %55 = call i32 (%struct.seq_file*, i8*, ...) @seq_printf(%struct.seq_file* %54, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0), i8* %20)
  br label %56

56:                                               ; preds = %37
  %57 = load i32, i32* @HEX_ROW_SIZE, align 4
  %58 = load i32, i32* %6, align 4
  %59 = add nsw i32 %58, %57
  store i32 %59, i32* %6, align 4
  br label %33

60:                                               ; preds = %33
  %61 = load i8*, i8** %9, align 8
  call void @llvm.stackrestore(i8* %61)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @min(i32, i32) #2

declare dso_local i32 @seq_printf(%struct.seq_file*, i8*, ...) #2

declare dso_local i32 @hex_dump_to_buffer(i32*, i32, i32, i32, i8*, i32, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
